# XKey

./: .gitignore  CMakeLists.txt  ExampleKeystore.txt  README  XKey.kdev4
.kdev4/: XKey.kdev4
example/: Rev11.xkey  Rev12.xkey  Rev14.xkey
include/: CryptStream.h  XKey.h  XKeyGenerator.h  XKeyJsonSerialization.h
src/: CryptStream.cpp  CryptStream.h  UtilFunctions.cpp  XKey.cpp  XKey.h  XKeyGenerator.cpp  XKeyGenerator.h  XKeyJsonSerialization.cpp  main.cpp  test.cpp  write_test.cpp
src/core/: CryptStream.cpp  XKey.cpp  XKeyJsonSerialization.cpp
src/qt/: CMakeLists.txt  FileDialog.cpp  FileDialog.h  FolderListModel.cpp  FolderListModel.h  KeyEditDialog.cpp  KeyEditDialog.h  KeyListModel.cpp  KeyListModel.h  SettingsDialog.cpp  SettingsDialog.h  XKey.cpp  XKey.h  XKeyApplication.cpp  XKeyApplication.h  qt_main.cpp  res.qrc
test/: CMakeLists.txt  CryptStreamOld.cpp  CryptStreamOld.h  XMigrate.cpp  test.cpp  write_test.cpp
ui/: About.ui  Entry.ui  FileDialog.ui  Main.ui  OpenKeystorePassphrase.ui  SaveKeystorePassphrase.ui  Settings.ui
